src/test/deca/context/invalid/langage_essentiel/troisieme_passe/regle_3_39_1.deca
// Description:
//    regle 3.39, condition
//
// Resultats:
//    Ligne 14: Undeclared type identifier : 'B'.


class C{

}

{
    C c = new C();
    C b = (B) (c);
}